/*
 *  Copyright (c) 2016, https://github.com/nebula-im
 *  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nebulaim.zproto";
option java_outer_classname = "ZProtoAuthKeyStorage";
option optimize_for = CODE_SIZE;

import "message.proto";

package zproto;

///////////////////////////////////////////////////////////////////////
// ServerAuthReq ==> VoidRsp
// SERVER_AUTH_REQ
message GetAuthKeyReq {
    int64 auth_key_id = 1;
}

message BoolRsp {
    int32 result = 1;
}

message AuthKeyData {
    int64 auth_key_id = 1;
    bytes auth_key = 2;
}

service RPCAuthKeyStorage {
    rpc PutAuthKey(AuthKeyData) returns (VoidRsp);
    rpc GetAuthKey(GetAuthKeyReq) returns (AuthKeyData);
}
