/*
 *  Copyright (c) 2017, https://github.com/nebulaim
 *  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nebulaim.zproto";
option java_outer_classname = "ZProtoAuthSession";
option optimize_for = CODE_SIZE;

package zproto;

import "message.proto";

message AuthUserReq {
    int64 auth_key_id = 1;
}

message AuthUserRsp {
    int64 auth_key_id = 1;
    int32 user_id = 2;
}

message OnlineStatus {
    int32 user_id = 1;
    int64 auth_key_id = 2;
    int64 session_id = 3;
    int32 server_id = 4;
    int64 netlib_session_id = 5;
    int64 now = 6;
}

service RPCAuthSession {
    rpc GetAuthUser(AuthUserReq) returns (AuthUserRsp);
    rpc UpdateOnline(OnlineStatus) returns (VoidRsp);
}
